refactor: 정적 리소스 읽어오는 방법 변경